# OCR_interpreter

./: .gitignore  0005.xml  0259.xml  0281.xml  CMakeLists.txt  Makefile  README.md  bestThresh.txt  blockOut  cmake_install.cmake  invalidFiles.txt  linker.h  main  main.cpp  old_parser.cpp  output_0033.txt  parser.cpp  parser.h  segment.py  segmentNew.py  testThresh.cpp  validFiles.txt
classes/: CMakeLists.txt  segment.cpp
classes/src/: block.cpp  block.h  link.cpp  link.h  main.cpp  segment.cpp  segment.h  segment_temp.cpp  textLine.cpp  textLine.h
groundTruthSoftware/: CMakeLists.txt  README.txt
groundTruthSoftware/src/: .groundTruth.cpp.swp  groundTruth.cpp  groundTruth.h  main.cpp
image_processing/: 0001.json  mser_filter.py  readme.md
input/: 0003.xml  0006.xml
input/image_region/: 0033.json  0034.json  0035.json  0036.json  0037.json  0038.json  0045.json
output/blockOut/: output_0003.txt  output_0005.txt  output_0006.txt  output_0035.txt  output_0037.txt  output_0259.txt  output_0281.txt
src/: segment.cpp  segment.h  textLine.cpp  textLine.h
